objects/Task1__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tasks1</relationshipLabel>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RemianderType__c</fullName>
        <label>Remiander Type</label>
        <picklist>
            <picklistValues>
                <fullName>Followups with member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting BU Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>extend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Task1</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>